# mz-clusterctl

./: .gitignore  CLAUDE.md  MULTI_STRATEGY_USAGE.md  NOTICE  PLAN.md  README-github-actions.md  README.md  SPEC.md  action.yml  debug_test.py  docker-compose.test.yml  periodic-clusterctl-without-composite-gha.yml  periodic-clusterctl.yml  pyproject.toml  run-tests.sh
.github/workflows/: README.md  nightly-tests.yml  periodic-clusterctl.yml
src/mz_clusterctl/: __main__.py  constants.py  coordinator.py  db.py  engine.py  environment.py  executor.py  log.py  models.py  signals.py
src/mz_clusterctl/strategies/: __init__.py  base.py  burst.py  idle_suspend.py  shrink_to_fit.py  target_size.py
src/mz_schedctl/: __init__.py  __main__.py  db.py  engine.py  executor.py  log.py  models.py  signals.py
src/mz_schedctl/strategies/: __init__.py  base.py  burst.py  idle_shutdown.py  idle_suspend.py  target_size.py
tests/: README.md  __init__.py  conftest.py  integration_helpers.py  test_burst_strategy.py  test_duplicate_deduplication.py  test_idle_suspend_strategy.py  test_integration_cross_cutting.py  test_shrink_to_fit_strategy.py  test_target_size_strategy.py
