[project]
name = "mz-schedctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aljoscha Krettek", email = "aljoscha.krettek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mz-schedctl = "mz_schedctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
