[project]
name = "mz-schedctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aljoscha Krettek", email = "aljoscha.krettek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.9",
    "structlog>=25.4.0",
]

[project.scripts]
mz-schedctl = "mz_schedctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
