[project]
name = "mz-clusterctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aljoscha Krettek", email = "aljoscha.krettek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.9",
    "structlog>=25.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mz-clusterctl = "mz_clusterctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
